Bug 1128576: Annotate MediaPromise.h method 'AssertOnDispatchThread' as MOZ_OVERRIDE. rs=bholley